--- a/flutter/assets/AssetManifest.json
+++ b/flutter/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"lib/json/config.json":["lib/json/config.json"],"lib/json/request.json":["lib/json/request.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"lib/json/color.json":["lib/json/color.json"],"lib/json/config.json":["lib/json/config.json"],"lib/json/request.json":["lib/json/request.json"],"lib/json/validation.json":["lib/json/validation.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
