--- a/flutter/flutter_template/manifest.json
+++ b/flutter/flutter_template/manifest.json
@@ -11,23 +11,23 @@
     "icons": [
         {
             "src": "icons/Icon-192.png",
-            "sizes": "192x192",
+            "size.s": "192x192",
             "type": "image/png"
         },
         {
             "src": "icons/Icon-512.png",
-            "sizes": "512x512",
+            "size.s": "512x512",
             "type": "image/png"
         },
         {
             "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
+            "size.s": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
             "src": "icons/Icon-maskable-512.png",
-            "sizes": "512x512",
+            "size.s": "512x512",
             "type": "image/png",
             "purpose": "maskable"
         }
